fix: services min-height modified for services section - overflow-x hidden for body, html - max-width for 993px media querie for hero buttons

--- a/public/styles/base/reset.css
+++ b/public/styles/base/reset.css
@@ -12,6 +12,7 @@
    ============================== */
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -24,6 +25,7 @@ body {
     line-height: var(--line-height-base);
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
 
 img,
