--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -42,7 +42,7 @@
     .btn-orange,
     .btn-blue {
         font-size: 18px;
-        max-width: 300px;
+        max-width: 215px;
     }
 
     .contact-section .form {
